# cs3338FinalProject

./: .gitignore  README.md  docker-compose.yml  repo-location.txt
docs/Design_Specification/: Design_Specifications.tex  readMe.txt
docs/TestRunResults/: placeholder.md
docs/snapshot_objectives/: Snapshot_Objectives.tex
docs/software_design_document/: SDD_final.tex
docs/software_requirement_specification/: SRS_final.tex
docs/user_manual/: README_HDR_Tone_Mapping.tex
docs/workflow_diagram/: project_workflow_diagram.md
plugin/: README.md
src/: CMakeLists.txt  LuminanceAnalyzer.cpp  PluginEntry.cpp  PresetManager.cpp  PreviewRenderer.cpp  README.md  ToneMappingEngine.cpp  ToneMappingEngine.h
tests/: README.md
